@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.montreal.greek-tv" name="Montreal Greek TV" version="2.0.1" provider-name="Twilight0">
+<addon id="plugin.video.montreal.greek-tv" name="Montreal Greek TV" version="2.0.2" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.python" version="2.24.0"/>
         <import addon="script.module.tulip" version="2.0.7"/>
@@ -17,6 +17,10 @@
         <license>GNU General Public License, v3</license>
         <size>633158</size>
         <news>
+[B]2.0.2[/B] - 12-07-2018
+- Fix for audio indexer (podcasts) on Estuary
+- New title for podcasts
+
 [B]2.0.1[/B] - 12-07-2018
 - Revert to client-request for newspaper indexes
 
