@@ -1,3 +1,7 @@
+[B]2.0.2[/B] - 12-07-2018
+- Fix for audio indexer (podcasts) on Estuary
+- New title for podcasts
+
 [B]2.0.1[/B] - 12-07-2018
 - Revert to client-request for newspaper indexes
 
